// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logical-expression.ng 1`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
    advancedSearchService.patientInformationFieldsRow2 && advancedSearchService.patientInformationFieldsRow2.indexOf(advancedSearchService.formElementData.customFieldList[i].customFieldType) !== -1
]

=====================================output=====================================
[
  advancedSearchService.patientInformationFieldsRow2 &&
    advancedSearchService.patientInformationFieldsRow2.indexOf(
      advancedSearchService.formElementData.customFieldList[i].customFieldType
    ) !== -1
]
================================================================================
`;

exports[`logical-expression.ng 2`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
[
    advancedSearchService.patientInformationFieldsRow2 && advancedSearchService.patientInformationFieldsRow2.indexOf(advancedSearchService.formElementData.customFieldList[i].customFieldType) !== -1
]

=====================================output=====================================
[
  advancedSearchService.patientInformationFieldsRow2 &&
    advancedSearchService.patientInformationFieldsRow2.indexOf(
      advancedSearchService.formElementData.customFieldList[i].customFieldType
    ) !== -1
]
================================================================================
`;

exports[`logical-expression.ng 3`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
    advancedSearchService.patientInformationFieldsRow2 && advancedSearchService.patientInformationFieldsRow2.indexOf(advancedSearchService.formElementData.customFieldList[i].customFieldType) !== -1
]

=====================================output=====================================
[
  advancedSearchService.patientInformationFieldsRow2 &&
    advancedSearchService.patientInformationFieldsRow2.indexOf(
      advancedSearchService.formElementData.customFieldList[i].customFieldType
    ) !== -1
]
================================================================================
`;

exports[`pipe-expression.ng 1`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
    a ? (b | c : d) : (e | f : g),
    a | b | c | d,
    ((a | b) | c) | d,
    a | b:(c | d),
    { a: b | c },
    (a + b) | c,
    (a | b) + c,
    fn(a | b),
    a?.b(c | d),
    a[b | c],
    ($students | async).items,
    ($students | async)(),
    myData | myPipe:'arg1':'arg2':'arg3',
    value
      | pipeA: {
        keyA: reallySuperLongValue,
        keyB: shortValue | pipeB | pipeC: valueToPipeC
      } : {
        keyA: reallySuperLongValue,
        keyB: shortValue | pipeB | pipeC: valueToPipeC
      }
      | aaa,
   (hideLinqPanel ? "ReportSelection.HideShowLabel_Show.String" : "ReportSelection.HideShowLabel_Hide.String") | localize:(localizationSection) 
]

=====================================output=====================================
[
  a ? (b | c: d) : (e | f: g),
  a | b | c | d,
  a | b | c | d,
  a | b: (c | d),
  { a: b | c },
  a + b | c,
  (a | b) + c,
  fn(a | b),
  a?.b(c | d),
  a[b | c],
  ($students | async).items,
  ($students | async)(),
  myData | myPipe: "arg1":"arg2":"arg3",
  value
    | pipeA
      : {
          keyA: reallySuperLongValue,
          keyB: shortValue | pipeB | pipeC: valueToPipeC
        }
      : {
          keyA: reallySuperLongValue,
          keyB: shortValue | pipeB | pipeC: valueToPipeC
        }
    | aaa,
  (hideLinqPanel
    ? "ReportSelection.HideShowLabel_Show.String"
    : "ReportSelection.HideShowLabel_Hide.String"
  ) | localize: localizationSection
]
================================================================================
`;

exports[`pipe-expression.ng 2`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
[
    a ? (b | c : d) : (e | f : g),
    a | b | c | d,
    ((a | b) | c) | d,
    a | b:(c | d),
    { a: b | c },
    (a + b) | c,
    (a | b) + c,
    fn(a | b),
    a?.b(c | d),
    a[b | c],
    ($students | async).items,
    ($students | async)(),
    myData | myPipe:'arg1':'arg2':'arg3',
    value
      | pipeA: {
        keyA: reallySuperLongValue,
        keyB: shortValue | pipeB | pipeC: valueToPipeC
      } : {
        keyA: reallySuperLongValue,
        keyB: shortValue | pipeB | pipeC: valueToPipeC
      }
      | aaa,
   (hideLinqPanel ? "ReportSelection.HideShowLabel_Show.String" : "ReportSelection.HideShowLabel_Hide.String") | localize:(localizationSection) 
]

=====================================output=====================================
[
  a ? (b | c: d) : (e | f: g),
  a | b | c | d,
  a | b | c | d,
  a | b: (c | d),
  { a: b | c },
  a + b | c,
  (a | b) + c,
  fn(a | b),
  a?.b(c | d),
  a[b | c],
  ($students | async).items,
  ($students | async)(),
  myData | myPipe: "arg1":"arg2":"arg3",
  value
    | pipeA
      : {
          keyA: reallySuperLongValue,
          keyB: shortValue | pipeB | pipeC: valueToPipeC
        }
      : {
          keyA: reallySuperLongValue,
          keyB: shortValue | pipeB | pipeC: valueToPipeC
        }
    | aaa,
  (hideLinqPanel
    ? "ReportSelection.HideShowLabel_Show.String"
    : "ReportSelection.HideShowLabel_Hide.String"
  ) | localize: localizationSection
]
================================================================================
`;

exports[`pipe-expression.ng 3`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
    a ? (b | c : d) : (e | f : g),
    a | b | c | d,
    ((a | b) | c) | d,
    a | b:(c | d),
    { a: b | c },
    (a + b) | c,
    (a | b) + c,
    fn(a | b),
    a?.b(c | d),
    a[b | c],
    ($students | async).items,
    ($students | async)(),
    myData | myPipe:'arg1':'arg2':'arg3',
    value
      | pipeA: {
        keyA: reallySuperLongValue,
        keyB: shortValue | pipeB | pipeC: valueToPipeC
      } : {
        keyA: reallySuperLongValue,
        keyB: shortValue | pipeB | pipeC: valueToPipeC
      }
      | aaa,
   (hideLinqPanel ? "ReportSelection.HideShowLabel_Show.String" : "ReportSelection.HideShowLabel_Hide.String") | localize:(localizationSection) 
]

=====================================output=====================================
[
  a ? (b | c: d) : (e | f: g),
  a | b | c | d,
  a | b | c | d,
  a | b: (c | d),
  { a: b | c },
  a + b | c,
  (a | b) + c,
  fn(a | b),
  a?.b(c | d),
  a[b | c],
  ($students | async).items,
  ($students | async)(),
  myData | myPipe: "arg1":"arg2":"arg3",
  value
    | pipeA
      : {
          keyA: reallySuperLongValue,
          keyB: shortValue | pipeB | pipeC: valueToPipeC
        }
      : {
          keyA: reallySuperLongValue,
          keyB: shortValue | pipeB | pipeC: valueToPipeC
        }
    | aaa,
  (hideLinqPanel
    ? "ReportSelection.HideShowLabel_Show.String"
    : "ReportSelection.HideShowLabel_Hide.String"
  ) | localize: localizationSection
]
================================================================================
`;
